--- a/app/src/assets/styles/customButton.css
+++ b/app/src/assets/styles/customButton.css
@@ -15,6 +15,7 @@
 @media (max-width: 767px) {
     .custom-button p {
         padding: 0 30px;
-        font-size: 18px;
+        font-size: 16px;
+        font-weight: 500;
     }
 }
