--- a/app/src/assets/styles/homepage.css
+++ b/app/src/assets/styles/homepage.css
@@ -50,6 +50,7 @@
 
 .right-footer-tandc {
     color: #FF6666;
+    cursor: pointer;
 }
 
 /* Medai query */
